--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="rncmobile" >
+        android:name="rncmobile"
+        android:icon="@mipmap/ic_launcher">
 
         <meta-data
             android:name="com.google.android.gms.version"
