--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:label="Edit RNC" android:name=".LogsDetailsActivity"/>
+        <activity android:label="Edit RNC" android:name=".LogsMapsActivity"/>
     </application>
 
 </manifest>
