--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!-- <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" /> -->
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
@@ -42,8 +42,9 @@
         <activity android:label="Show on map" android:name=".LogsMapsActivity"/>*
         <activity android:label="Set Coordinates" android:name=".LogsSetCooActivity"/>
         <activity android:label="Export Logs" android:name=".ExportLogsActivity"/>
-        <activity android:label="Export Logs" android:name=".CrashActivity"/>
-        <activity android:label="Export Logs" android:name=".DataActivity"/>
+        <activity android:label="Crash management" android:name=".CrashActivity"/>
+        <activity android:label="ImportExport management" android:name=".DataActivity"/>
+        <activity android:label="Settings" android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
