--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,15 @@ android {
     }
 }
 
+android {
+    packagingOptions {
+        exclude 'AndroidManifest.xml'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.android.support:support-v4:22.2.0'
-    compile files('libs/mpandroidchartlibrary-2-1-5.jar')
 }
