--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@style/RFMTheme"
         android:name="rncmobile"
         android:icon="@mipmap/ic_launcher">
 
