--- a/version.properties
+++ b/version.properties
@@ -1,4 +1,4 @@
-#Sat Oct 24 18:22:32 CEST 2015
-VERSION_BUILD=3021
-VERSION_PATCH=5
-VERSION_CODE=1918
+#Sun Oct 25 19:11:46 CET 2015
+VERSION_BUILD=3072
+VERSION_PATCH=9
+VERSION_CODE=1969
