--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,10 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyABYF0dw4KVrVHhZkGdad65KAjriuVkV8U" />
-
+        <!-- android:launchMode="singleInstance" -->
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleInstance"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,9 +40,7 @@
             </intent-filter>
         </activity>
         <activity android:label="Edit RNC" android:name=".LogsDetailsActivity"/>
-        *
         <activity android:label="Export Logs" android:name=".ExportLogsActivity"/>
-        <activity android:label="Crash management" android:name=".CrashActivity"/>
         <activity android:label="ImportExport management" android:name=".DataActivity"/>
         <activity android:label="Settings" android:name=".SettingsActivity"/>
         <service
