Update to Android Studio 2.0

--- a/version.properties
+++ b/version.properties
@@ -1,4 +1,4 @@
-#Fri Nov 06 06:47:51 CET 2015
-VERSION_BUILD=3379
+#Mon Apr 11 10:18:12 CEST 2016
+VERSION_BUILD=3393
 VERSION_PATCH=5
-VERSION_CODE=2276
+VERSION_CODE=2290
