Add authorization  - API23
Request permission OK , but crash on first launch

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
         defaultConfig {
             versionCode version_Code
-            versionName "RNCFreeMobile-${versionMajor}.${versionMinor}.${versionPatch}-${versionBuild}"
+            versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         }
     } else {
         throw new GradleException("Could not read version.properties!")
