--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/RFMTheme"
         android:name=".activity.rncmobile"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/rncmobile_logo">
 
         <meta-data
             android:name="com.google.android.gms.version"
